<resources>
    <!-- SETTINGS KEYS -->
    <string name="enable_test_mode_key">enable_test_mode_pref_key</string>
    <string name="allow_overwrite_key">allow_overwrite_pref_key</string>
    <string name="user_stride_length_key">user_stride_length_pref_key</string>
    <string name="fill_history_key">fill_history_pref_key</string>
    <string name="default_view_key">default_view_pref_key</string>
    <string name="enable_edit_goal_key">enable_edit_goal_pref_key</string>

    <!-- BUNDLE KEYS -->
    <string name="date_bundle_key">date</string>

    <!-- EVERYTHING ELSE -->
    <string name="app_name">MyKeepFit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="delete_history">Delete history</string>
    <string name="rand_populate">Populate data</string>
    <string name="forward_slash">/</string>
    <string name="no_goals_for_day">No goals available</string>

    <!-- SETTINGS LABELS -->
    <string name="user_stride_length_header">Length of stride (metres)</string>

    <string name="progress_increment_amount">Progress increment amount</string>
    <string name="add_progress">Add Progress</string>
    <string name="units">Units</string>
    <string name="add_goal">Add Goal</string>
    <string name="delete_label">Delete</string>
    <string name="select_date">Set Date (Test Mode)</string>

    <!-- TABS -->
    <string name="activity_tab">ACTIVITY</string>
    <string name="goals_tab">GOALS</string>
    <string name="history_tab">HISTORY</string>
    <string name="stats_tab">STATS</string>


    <!-- UNITS -->
    <string name="steps">steps</string>
    <string name="yards">yds</string>
    <string name="metres">m</string>
    <string name="kilometres">km</string>
    <string name="miles">mls</string>
    <string name="default_target">0.00</string>
    <string name="default_progress">0.00</string>
    <string name="default_title">N/A</string>


    <!-- Default Goal -->
    <string name="default_goal_title">Default</string>
    <string name="default_goal_target">10000</string>
    <string name="default_goal_unit">steps</string>

</resources>
