<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:background="@color/ghostWhiteColor"
      tools:context="com.cjsheehan.fitness.MainActivity">

    <item
        android:id="@+id/menu_select_date"
        android:icon="@drawable/ic_event_white"
        android:orderInCategory="10"
        android:title="@string/select_date"
        android:visible="false"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/random_populate"
        android:icon="@drawable/ic_event_white"
        android:orderInCategory="10"
        android:title="@string/rand_populate"
        android:visible="true"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/delete_history"
        android:icon="@android:drawable/ic_input_delete"
        android:orderInCategory="10"
        android:title="@string/delete_history"
        android:visible="true"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
