<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/active_goal_current_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:inputType="number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/default_target"
        android:textSize="30dp"
        android:editable="false"
        android:layout_gravity="center_horizontal"
        android:gravity="right"
        android:layout_above="@+id/space"
        android:layout_toStartOf="@+id/active_goal_unit_text"/>

    <TextView
        android:id="@+id/active_goal_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/default_target"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/active_goal_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/metres"
        android:textStyle="bold|italic"
        android:layout_below="@+id/active_goal_target"
        android:layout_toEndOf="@+id/active_goal_target"
        android:gravity="right"/>

    <Space
        android:layout_width="10px"
        android:layout_height="10px"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_title"
        android:textColor="@color/teal700"
        android:id="@+id/active_goal_title"
        android:layout_above="@+id/active_goal_current_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textStyle="italic"/>

</RelativeLayout>